--- a/main.yml
+++ b/main.yml
@@ -2,9 +2,14 @@
 - hosts: localhost
   gather_facts: false
   become: true
-  
-  collections:
-    - my.common
 
+  # works
+  # collections:
+  #   - my.common
+  # 
+  # roles:
+  #   - my-role
+
+  # fails?
   roles:
-    - my-role
+    - my.common.my-role
